# jumpingkid-backend-with-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: __init__.py  database.py
src/models/: __init__.py  assignment.py  exercise.py  kid.py  responses.py  routine.py  training.py  user.py
src/services/: __init__.py  assignment_service.py  exercise_service.py  kid_service.py  routine_service.py  training_service.py  user_service.py
src/web/: dependencies.py
src/web/routers/: assignments.py  auth.py  exercises.py  kids.py  routines.py  training.py  utils.py
src/web/schemas/: auth_schemas.py
