[tool.poetry]
name = "jumpingkid-backend-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto Baltazar Hinojosa <97766052+carlos-alberto-code@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
